# rs-armor-detector

./: CMakeLists.txt  LICENSE  README.md
src/: cv-helpers.hpp  main.cpp  rs-armor-detector.cpp  rs-armor-detector.hpp
src/seu-detect/: README.md
src/seu-detect/Armor/: ArmorDetector.cpp  ArmorDetector.h
src/seu-detect/General/: General.h  numeric_rm.cpp  numeric_rm.h  opencv_extended.cpp  opencv_extended.h
